# technomancy

./: Cargo.toml  LICENSE  README.md  flake.nix  rust-toolchain.toml
core/: Cargo.toml
core/src/: card.rs  effect.rs  lib.rs  meta.rs  outside.rs
crates/card_rule_engine/: Cargo.toml
crates/card_rule_engine/src/: game_dsl.rs  game_state.rs  lib.rs
crates/technomancy/: Cargo.toml
docs/: card_engine.md  game_rules.md  gamestructure.md  glossary.md
engine/: Cargo.toml
engine/src/: card.rs  effect.rs  lib.rs  outside.rs
server/: Cargo.toml  README.md
server/src/: lobby.rs  main.rs  user.rs
server/templates/: lobbies.hbs  root.hbs
server/templates/lobbies/: &lobby_id.hbs
src/: card.rs  effect.rs  lib.rs  lobby.rs  main.rs  outside.rs  user.rs
technomancy_engine/: Cargo.toml
technomancy_engine/src/: card.rs  effect.rs  lib.rs  outside.rs
templates/: base.hbs  login.hbs
templates/lobbies/: &lobby_id.hbs
