[workspace]
members = ["core", "engine"]

[workspace.dependencies]
technomancy_core = { version = "0.0.0", path = "./core" }

async-trait = "0.1.68"
clap = { version = "4.3.11" }
dashmap = { version = "5.4.0" }
futures = "0.3.28"
hashbrown = { version = "0.13.2" }
rand = "0.8.5"
rand_xoshiro = { version = "0.6.0" }
serde = { version = "1.0.163" }
tarpc = { version = "0.33.0" }
test-log = { version = "0.2.12", default-features = false }
thiserror = "1.0.40"
tokio = { version = "1.28.1" }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17" }
uuid = { version = "1.3.2" }
