[package]
name = "technomancy_core"
version = "0.0.0"
edition = "2021"
license = "GPL-3.0-only"
description = "The technomancy core data types"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.71"
hashbrown = { version = "0.14.0", features = ["serde"] }
rand = "0.8.5"
rand_xoshiro = { version = "0.6.0", features = ["serde1"] }
serde = { version = "1.0.171", features = ["derive"] }
tarpc = "0.33.0"
thiserror = "1.0.43"
uuid = { version = "1.4.0", features = ["v4", "serde"] }
