[package]
name = "technomancy_core"
license = "GPL-3.0-only"
description = "The technomancy core data types"
version.workspace = true
edition.workspace = true
repository.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.71"
futures = "0.3.28"
hashbrown = { version = "0.14.0", features = ["serde"] }
rand = "0.8.5"
rand_xoshiro = { version = "0.6.0", features = ["serde1"] }
serde = { version = "1.0.171", features = ["derive"] }
static_assertions = "1.1.0"
tarpc = { version = "0.33.0", features = [
    "serde-transport",
    "serde-transport-json",
    "tcp",
] }
thiserror = "1.0.43"
tokio = { version = "1.29.1", features = ["full"] }
tracing = "0.1.37"
uuid = { version = "1.4.0", features = ["v4", "serde"] }
