[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait.workspace = true
axum = { workspace = true, features = ["tracing", "http2", "macros", "ws"] }
axum-login.workspace = true
axum-sessions.workspace = true
axum-template = { workspace = true, features = ["handlebars"] }
handlebars = { workspace = true, features = ["dir_source"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
tower-http = { workspace = true, features = ["fs"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
