[package]
name = "technomancy_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.163", features = ["derive"] }
tokio = { version = "1.28.1", features = ["tokio-macros", "rt-multi-thread", "rt", "sync", "macros"] }
uuid = { version = "1.3.2", features = ["v4", "serde"] }
